--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ ul {
     position: relative;
     height: 100vh;
     min-height: 500px;
-    background-image: url('assets/landing-nature.png');
+    background-image: url('assets/landing-nature.webp');
     background-size: cover;
     background-position: center;
     color: var(--white-color);
