resource heavy pngs changed to webp

--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ ul {
 .ambitious-cta-section {
     position: relative;
     padding: 120px 0;
-    background-image: url('assets/natureback.jpeg');
+    background-image: url('assets/natureback.webp');
     background-size: cover;
     background-position: center;
     background-attachment: fixed; 
